# WealthBot

./: .env.example  .env.production.template  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  prompt.md  pyproject.toml  requirements.txt  wealthbot_ui.md
.github/: copilot-instructions.md
.next/dev/cache/: .rscinfo
alembic/: env.py
alembic/versions/: .gitkeep  20260305_0001_initial_tables_users_transactions.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  analytics.py  assistant.py  predictions.py  statements.py  transactions.py  users.py
app/core/: __init__.py  config.py  rate_limit.py  security.py
app/db/: __init__.py  database.py  models.py
app/schemas/: __init__.py  common.py  prediction.py  transaction.py  user.py
app/services/: __init__.py  ml_service.py
frontend/: .env.example  .gitignore  Dockerfile  README.md  eslint.config.js  eslint.config.mjs  next.config.js  playwright.config.ts  tailwind.config.js
frontend/e2e/: smoke.spec.ts
frontend/public/: robots.txt
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/budgets/: page.tsx
frontend/src/app/investments/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/transactions/: page.tsx
frontend/src/components/assistant/: AuraAssistant.tsx  index.ts
frontend/src/components/charts/: BudgetDonutChart.tsx  BudgetGauge.tsx  ForecastChart.tsx  PortfolioChart.tsx  VelocityChart.tsx  index.ts
frontend/src/components/landing/: Footer.tsx  LandingNav.tsx  index.ts
frontend/src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
frontend/src/components/providers/: Providers.tsx
frontend/src/components/ui/: CategoryBadge.tsx  ErrorBoundary.tsx  LoadingSkeleton.tsx  MetricCard.tsx  ProgressBar.tsx  StatusBadge.tsx  TimeRangeSelector.tsx  index.ts
frontend/src/constants/: data.ts
frontend/src/hooks/: index.ts  useApi.ts  useAuth.ts
frontend/src/stores/: index.ts  userStore.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
ml/: __init__.py
ml/inference/: __init__.py
ml/models/: .gitkeep  X_train.npy  y_train.npy
ml/preprocessing/: __init__.py  features.py  synthetic_data.py
ml/training/: __init__.py  train_categorizer.py  train_categorizer_colab.ipynb  train_xgboost.py
nginx/: Dockerfile  nginx.conf
scripts/: init-db.sql  seed_dummy_account.py  verify_artifacts.py
tests/: __init__.py  conftest.py  test_auth_refresh.py  test_health.py  test_logging.py  test_ml_service.py  test_phase5_endpoints.py  test_phase6_middleware.py  test_predictions.py  test_security.py  test_transactions.py  test_users.py
